Fix lite tooltip being covered

--- a/src/components/article-page/article-page.css
+++ b/src/components/article-page/article-page.css
@@ -17,7 +17,6 @@
   --shadow-border-card: 0px 0px 6px hsla(0, 0%, 0%, 0.07);
   --shadow-border-large: 0 8px 24px hsla(212, 9%, 59%, 0.2);
   --ease-cubic-in-out: cubic-bezier(0.645, 0.045, 0.355, 1);
-  --border-radius: 5px;
   --container-h-padding: 12px;
   --container-v-padding: 10px;
   --border-radius: 6px;
@@ -257,7 +256,7 @@
   border-left: none;
   border-top-right-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
-  overflow: hidden;
+
   z-index: 10;
   box-sizing: border-box;
 
